2002-04-26  Adam Fedor  <fedor@gnu.org>

	* acconfig.h: Define HAVE_UTF8
	* config.h.in: Regen.

2002-04-24  Adam Fedor  <fedor@gnu.org>

	* configure.in: Don't enable wraster support if --with-wraster=none.
	Print error if no backend server or graphics configured.

2002-04-23  Adam Fedor  <fedor@gnu.org>

	* Headers/x11/XGServer.h: Rework to handle multiple screens.
	* Headers/xlib/XGContext.h: Simplify.

	* Source/win32/WIN32Server.m (-mouseLocationOnScreen:window:): 
	Implement.

	* Source/x11/XGServer.m: Rework to handle multiple screens. New
	XScreenContext class.
	(-initXContext): Use it.
	(-_screenContextForScreen:): Implement.
	(-xrContextForScreen:): Idem.
	(-drawMechanismForScreen:): Idem.
	(-xDisplayRootWindowForScreen:): Idem.
	(-xColorFromColor:forScreen:): Idem.
	* Source/x11/XGServerEvent.m (-mouseLocationOnScreen:window:):
	Implement.
	* Source/x11/XGServerWindow.m (-window::::): Use screen arg.
	(_blankCursor): Use default screen for drawable (?).
	(imagecursor::::::): Idem.

	* Source/xlib/XGBitmapImageRep.m: Update for new server interface.
	* Source/xlib/XGGState.m: Idem.

2002-04-22  Georg Fleischmann

	* back/Source/xlib/XGGState.m
	[XGGState DPSsetlinewidth:]: scale line width.

2002-04-23  Fred Kiefer <FredKiefer@gmx.de>

	* Source/win32/WIN32Server.m
	[window::::] corrected and simplified the last change.

2002-04-22  Adam Fedor  <fedor@gnu.org>

	* configure.in: Check for gdi32.

	* Source/win32/WIN32Server.m (window::::): Update for new interface -
	frame is frame rect, not content rect.
	
	* Source/x11/XGServer.m (-_initXContext): Look for
	display attributes in server_info.
	* Source/x11/XGServerWindow.m (-window::::): Update for new interface.

2002-04-21  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/win32
	* Headers/win32/WIN32Server.h
	* Headers/win32/WIN32Geometry.h
	* Source/win32
	* Source/win32/GNUmakefile
	* Source/win32/GNUmakefile.preamble
	* Source/win32/WIN32Server.m