@@ -1,3 +1,11 @@
+2002-04-27  Fred Kiefer <FredKiefer@gmx.de>
+
+	* Headers/win32/WIN32Server.h
+	* Headers/winlib/WIN32GState.h
+	* Source/win32/WIN32Server.m
+	* Source/winlib/WIN32GState.m
+	Made sure only resources allocated by our code will ever be freed.
+	
 2002-04-26  Adam Fedor  <fedor@gnu.org>
 
 	* acconfig.h: Define HAVE_UTF8
